Checkpoint commit prior to refactoring IBResource
IBResource is (was) designed as a generic type,
but the use has primarily fallen down to only
dealing with filesystem files and/or remote
resources.

Vertx types (using AsyncFile) were attempted, but
getting a working model out for 1.0 has become
more important.