@@ -46,7 +46,7 @@ public final class MavenDependenciesSupplier implements DependenciesSupplier {
       GAV k = new DefaultGAV(d.getGroupId(), d.getArtifactId(), d.getClassifier(), d.getVersion(), d.getType());
       GAV l = k.withFile(f);
       return l;
-    }).collect(toList());
+    }).toList();
 
   }
 
